--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "mongoose": "^4.9.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-oauth": "^1.0.0",
