--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 SESSION_SECRET='YOUR_SECRET_KEY_HERE'
 GOOGLE_CLIENT_ID='YOUR_GOOGLE_CLIENT_ID_HERE'
 GOOGLE_CLIENT_SECRET='YOUR_GOOGLE_CLIENT_SECRET_HERE'
+TWITTER_API_KEY='YOUR_TWITTER_API_KEY_HERE'
+TWITTER_API_SECRET='YOUR_TWITTER_API_SECRET_HERE'
