--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-oauth": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-beta11"
   }
 }
