--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "node ./bin/www"
   },
   "author": "Drew Barontini",
@@ -13,6 +14,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "jest": "^19.0.2",
     "mongoose": "^4.9.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
